add 聊天室 add 管理员操作 add 公告功能